Guide2Inspection stable version having all changes till 06/15 prior to Report Geneartion changes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
         <activity
             android:name=".utils.ImagePreviewActivity"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".permission.SecurityActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
